package com.anniefraz.dissertation.algorithms.GAs.main.selection;

import com.anniefraz.dissertation.gin.patch.Patch;

import java.util.List;

public class RandomSelection implements SelectionMethod{
    @Override
    public List<Patch> select(List<Patch> patches) {
        return null;
    }
}
