package com.anniefraz.dissertation.algorithms.localSearch;

import com.anniefraz.dissertation.gin.patch.Patch;

public class LocalSearch {

    /*
    private Patch patch; //like population

    private Edit fittest; //Individual

    static Logger LOG = Logger.getLogger(LocalSearch.class.getName());

    static int seed = 5678;

    public LocalSearch(String patchName) {

    }


    public static void main(String[] args) {
        Random rn = new Random(seed);

        LocalSearch localSearch = new LocalSearch(args[0]);
        Patch patch = localSearch.patch();
        LOG.info("Patch " + patch);

    }

    public Patch patch(){
        patch = new Patch();

        for (int i =0; i < 10; i++){
            Patch offspring = offSpring();
            LOG.info("offspring" + offspring);

            patch = offspring;

        }
        return patch;
    }

    public Patch offSpring(){
        return Patch.random();

    }
    */

    public Patch createNeighbour(Patch patch){



    }


}
