class HelloWorld{
    public static void main(String args[]){
        System.out.println("Hello Java");
        System.out.println(5+6);
        System.out.println("That's a very cunning plan baldrick ");
    }
}