@startuml

title __ALGORITHMS's Class Diagram__\n

  package  {
    package com.anniefraz.dissertation.algorithms.GAs.main {
      package com.anniefraz.dissertation.algorithms.GAs.main.crossover {
        interface CrossoverMethod {
        }
      }
    }
  }
  

  package  {
    package com.anniefraz.dissertation.algorithms.GAs.main {
      package com.anniefraz.dissertation.algorithms.GAs.main.crossover {
        class CrossoverThreeOffspring {
        }
      }
    }
  }
  

  package  {
    package com.anniefraz.dissertation.algorithms.GAs.main {
      package com.anniefraz.dissertation.algorithms.GAs.main.fitness {
        class FitnessEnergy {
        }
      }
    }
  }
  

  package  {
    package com.anniefraz.dissertation.algorithms.GAs.main {
      package com.anniefraz.dissertation.algorithms.GAs.main.fitness {
        interface FitnessMeasurement {
        }
      }
    }
  }
  

  package  {
    package com.anniefraz.dissertation.algorithms.GAs.main {
      package com.anniefraz.dissertation.algorithms.GAs.main.fitness {
        class FitnessUnitTests {
        }
      }
    }
  }
  

  package  {
    package com.anniefraz.dissertation.algorithms.GAs.toy {
      class GA {
      }
    }
  }
  

  package  {
    package com.anniefraz.dissertation.algorithms.GAs.main {
      class GA {
      }
    }
  }
  

  package  {
    package com.anniefraz.dissertation.algorithms.Test {
      class HelloWorld {
      }
    }
  }
  

  package  {
    class HelloWorld {
    }
  }
  

  package  {
    package com.anniefraz.dissertation.algorithms.HillClimbing {
      class HillClimbing {
      }
    }
  }
  

  package  {
    package com.anniefraz.dissertation.algorithms.GAs.toy {
      class Individual {
      }
    }
  }
  

  package  {
    package com.anniefraz.dissertation.algorithms.localSearch {
      class LocalSearch {
      }
    }
  }
  

  package  {
    package com.anniefraz.dissertation.algorithms.GAs.toy {
      class Population {
      }
    }
  }
  

  package  {
    package com.anniefraz.dissertation.algorithms.GAs.main {
      package com.anniefraz.dissertation.algorithms.GAs.main.selection {
        class RandomSelection {
        }
      }
    }
  }
  

  package  {
    package com.anniefraz.dissertation.algorithms.Test {
      class ReverseString {
      }
    }
  }
  

  package  {
    package com.anniefraz.dissertation.algorithms.Test {
      class ReverseStringTest {
      }
    }
  }
  

  package  {
    package com.anniefraz.dissertation.algorithms.GAs.main {
      package com.anniefraz.dissertation.algorithms.GAs.main.selection {
        interface SelectionMethod {
        }
      }
    }
  }
  

  package  {
    package com.anniefraz.dissertation.main.input {
      class UserInput {
      }
    }
  }
  

  CrossoverThreeOffspring -up-|> CrossoverMethod
  FitnessEnergy -up-|> FitnessMeasurement
  FitnessUnitTests -up-|> FitnessMeasurement
  FitnessUnitTests o-- UserInput : userInput
  GA o-- Population : population
  GA o-- Individual : fittest
  GA o-- Individual : secondFittest
  GA o-- UserInput : userInput
  HillClimbing o-- UserInput : userInput
  HillClimbing o-- Patch : bestPatch
  HillClimbing o-- Patch : worstPach
  HillClimbing o-- Patch : previousPatch
  HillClimbing o-- PatchFactory : patchFactory
  HillClimbing o-- Source : source
  RandomSelection -up-|> SelectionMethod


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
